force-app/main/default/objects/CaseEntityJunction__c/CaseEntityJunction__c.object-meta.xml
<CustomObject>
    <label>Participant Entity</label>
    <nameField>
        <displayFormat>PE-{0000}</displayFormat>
        <label>Entity ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Participant Entities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>