force-app/main/default/objects/CaseEntityJunction__c/fields/Addressee__c.field-meta.xml
<CustomField>
    <fullName>Addressee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Addressee</label>
    <type>Checkbox</type>
</CustomField>