force-app/main/default/objects/CaseEntityJunction__c/fields/Contact_Enrolee__c.field-meta.xml
<CustomField>
    <fullName>Contact_Enrolee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Participant__c.Entity__c</field>
            <operation>equals</operation>
            <valueField>$Source.Entity__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Participant__c</referenceTo>
    <relationshipLabel>Participant Entities</relationshipLabel>
    <relationshipName>Participant_Entities</relationshipName>
    <type>Lookup</type>
</CustomField>