force-app/main/default/objects/CaseEntityJunction__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <formula>Entity_Contact__r.Contact_Person_First_Name__c &amp; &quot; &quot; &amp; Entity_Contact__r.Contact_Person_Last_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Entity Contact Name</label>
    <type>Text</type>
</CustomField>