force-app/main/default/objects/CaseEntityJunction__c/fields/Entity__c.field-meta.xml
<CustomField>
    <fullName>Entity__c</fullName>
    <label>Entity</label>
    <referenceTo>Entity__c</referenceTo>
    <relationshipLabel>Participant Entities</relationshipLabel>
    <relationshipName>Entities</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>