force-app/main/default/objects/CaseEntityJunction__c/fields/Entity_Address__c.field-meta.xml
<CustomField>
    <fullName>Entity_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Entity Address</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Entity_Address__c.Entity__c</field>
            <operation>equals</operation>
            <valueField>$Source.Entity__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Entity_Address__c</referenceTo>
    <relationshipName>Entities</relationshipName>
    <type>Lookup</type>
</CustomField>