force-app/main/default/objects/CaseEntityJunction__c/fields/Entity_Address_f__c.field-meta.xml
<CustomField>
    <fullName>Entity_Address_f__c</fullName>
    <formula>Entity_Address__r.Address_1__c &amp; &quot; &quot; &amp; BR()  
&amp; Entity_Address__r.Address_2__c  &amp; &quot; &quot; &amp;  BR() &amp; Entity_Address__r.City__c  &amp; &quot;, &quot; 
&amp; TEXT(Entity_Address__r.State__c)  &amp; &quot; &quot; &amp;  Entity_Address__r.Zip__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Entity Address</label>
    <type>Text</type>
</CustomField>