force-app/main/default/objects/CaseEntityJunction__c/fields/Entity_Contact__c.field-meta.xml
<CustomField>
    <fullName>Entity_Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Entity Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Entity_Contact__c.Entity_Address__c</field>
            <operation>equals</operation>
            <valueField>$Source.Entity_Address__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Entity_Contact__c</referenceTo>
    <relationshipLabel>Participant Entities</relationshipLabel>
    <relationshipName>Entiy_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>