force-app/main/default/objects/CaseEntityJunction__c/fields/Entity_Name__c.field-meta.xml
<CustomField>
    <fullName>Entity_Name__c</fullName>
    <formula>Entity__r.Primary_Name__c &amp; &quot; &quot; &amp;  Entity__r.Secondary_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Entity Name</label>
    <type>Text</type>
</CustomField>