force-app/main/default/objects/CaseEntityJunction__c/fields/Entity_Type__c.field-meta.xml
<CustomField>
    <fullName>Entity_Type__c</fullName>
    <formula>TEXT(Entity__r.Entity_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Entity Type</label>
    <type>Text</type>
</CustomField>