force-app/main/default/objects/CaseEntityJunction__c/fields/Is_Send_Billing_To__c.field-meta.xml
<CustomField>
    <fullName>Is_Send_Billing_To__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Billing To</label>
    <type>Checkbox</type>
</CustomField>