force-app/main/default/objects/CaseEntityJunction__c/fields/isDeleted_MDIRO__c.field-meta.xml
<CustomField>
    <fullName>isDeleted_MDIRO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isDeleted</label>
    <type>Checkbox</type>
</CustomField>