force-app/main/default/objects/CaseEntityJunction__c/fields/Send_Billing_To__c.field-meta.xml
<CustomField>
    <fullName>Send_Billing_To__c</fullName>
    <formula>IF(INCLUDES( Case__r.Account.Send_Billing_To__c , &quot;Client&quot;)  &amp;&amp;  Entity_Type__c = &quot;Client&quot;, true, false) ||
IF(INCLUDES( Case__r.Account.Send_Billing_To__c , &quot;Health Plan&quot;) &amp;&amp; Entity_Type__c = &quot;Health Plan&quot;, true, false) ||
IF(INCLUDES( Case__r.Account.Send_Billing_To__c , &quot;Law Firm&quot;) &amp;&amp; Entity_Type__c = &quot;Law Firm&quot;, true, false) ||
IF(INCLUDES( Case__r.Account.Send_Billing_To__c , &quot;MCO&quot;) &amp;&amp; Entity_Type__c = &quot;MCO&quot;, true, false) ||
IF(INCLUDES( Case__r.Account.Send_Billing_To__c , &quot;Provider&quot;) &amp;&amp; Entity_Type__c = &quot;Provider&quot;, true, false) ||
IF(INCLUDES( Case__r.Account.Send_Billing_To__c , &quot;Provider Representative&quot;) &amp;&amp; Entity_Type__c = &quot;Provider Representative&quot;, true, false) ||
IF(INCLUDES( Case__r.Account.Send_Billing_To__c , &quot;Representative&quot;) &amp;&amp; Entity_Type__c = &quot;Health Plan&quot;, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Send Billing To</label>
    <type>Checkbox</type>
</CustomField>