force-app/main/default/objects/CaseEntityJunction__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Entity__c</columns>
    <columns>Entity_Address__c</columns>
    <columns>Entity_Type__c</columns>
    <columns>Entity_Contact__c</columns>
    <columns>Case__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>